toolchain/internal/core/analysis/testdata/errors/spreads/spread_cycle.vdl
// @expect: E204

type A {
  ...B
}

type B {
  ...A
}
